# LADCP

./: .dockerignore  .gitignore  CLAUDE.md  CONTINUATION_PLAN.md  Dockerfile  HANDOVER.md  Makefile  OCEANOGRAPHERS_NOTES.md  PROGRAMMERS_NOTES.md  README.md  USER_NOTES.md  VALIDATION_PLAN.md  pyproject.toml
docs/: HANDOVER.md  LDEO_IX_CHANGE_REQUEST.md  Project_Proposal.md
docs/history/: CONTINUATION_PLAN.md
docs/validation/: BULK_VALIDATION_BRIEF.md  BULK_VALIDATION_REPORT.md  VALIDATION_PLAN.md
octave_harness/: PATCHES.md  REPORT.md  diag_izm_root_cause.py  diag_stage_a.py  diag_stage_a_residual.py  diff_ingestion.py  diff_stages.py  dump_m1_ingestion.m  dump_m2_process_cast.m  formation_only.py  make_2hz_ctd.py  recorded_LOG_Inverse_log.txt  recorded_p_struct_attrs.txt  run_octave.sh  solver_only.py
octave_harness/ldeo_ix/: IGRF00.m  add_struct.m  default.m  end_processing_step.m  getinv.m  loadctd.m  loadnav.m  plotraw.m  process_cast.m  set_cast_params.m
octave_harness/stubs/: axes.m  axis.m  bar.m  caxis.m  clf.m  colorbar.m  colormap.m  contourf.m  figure.m  fill.m  (+20 more)
scripts/: diag_colnorms.py  diag_downcast_only.py  diag_e2_s4p_uldl.py  diag_rmse_strata.py  diag_ru_vs_ref.py  diag_ul_dl_rotation.py  diag_ul_orientation.py  diagnose_n_se.py  generate_sadcp_fixture.py  generate_sadcp_fixture_s4p.py  inspect_sbe_scan.py  validate_multicast.py
test_data/: sources.md
tests/: conftest.py  test_ctd_loader.py  test_editing.py  test_inverse.py  test_pd0_parser.py  test_pipeline_params.py  test_shear.py  test_smoke.py  test_soundspeed.py  test_transforms.py
(+50 files in other folders)
