[project]
name = "ladcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "numpy>=1.26",
    "xarray>=2024.1",
    "netCDF4>=1.7",
    "scipy>=1.12",
    "matplotlib>=3.8",
]

[project.scripts]
ladcp = "ladcp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ladcp"]

[tool.uv]
dev-dependencies = ["pytest>=8", "pytest-cov", "ruff>=0.4"]

[tool.ruff.lint]
select = ["E", "F", "I", "NPY", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
